data/derived/comb/progs/unify/prog3868.ml.out
Characters 49-58:
  if listReverse (explode w) = explode w
                               ^^^^^^^^^
Error: This expression has type char list
       but an expression was expected of type 'a list -> 'a list
